# AOIN_project

./: .gitignore  CMakeLists.txt  README.md  plot_sa.py  plots.py  python_tree.csv  requirements.txt  results.csv  results1.csv  results2.csv  sample_submission.csv  sample_submission_1.csv  santa2025.py  zarys.md
data/de_output/: de_config_scores_pop30_trees100_iter100_F0.7_CR0.8_final_2.csv  de_config_scores_pop30_trees10_iter100_F0.7_CR0.8_final_5.csv  de_config_scores_pop30_trees200_iter100_F0.7_CR0.8_final_10.csv  de_config_scores_pop30_trees50_iter100_F0.7_CR0.8_final_10.csv  de_iteration_stats_pop30_trees10_iter100_F0.7_CR0.8_final_5.csv  de_iteration_stats_pop30_trees50_iter100_F0.7_CR0.8_final_10.csv  de_solution_pop30_trees100_iter100_F0.7_CR0.8_final_2.csv  de_solution_pop30_trees10_iter100_F0.7_CR0.8_final_6.csv  de_solution_pop30_trees50_iter100_F0.7_CR0.8_final_10.csv
data/output_greedy/: greedy_solution.csv  trees.csv  trees_150.csv  trees_20.csv  trees_200.csv  trees_50.csv  trees_square_1.csv  trees_square_150.csv  trees_square_2.csv  trees_square_20.csv  trees_square_200.csv  trees_square_3.csv  trees_square_4.csv  trees_square_5.csv  trees_square_50.csv  trees_square_5_old.csv
data/sa_output/: sa_100_configuration_scores_20260130_000350.csv  sa_10_configuration_scores_20260129_230208.csv  sa_200_configuration_scores_20260202_102017.csv  sa_50_configuration_scores_20260130_131829.csv  submission_sa_20260129_230208.csv  submission_sa_20260130_000350.csv  submission_sa_20260130_131829.csv  submission_sa_20260202_102017.csv
data/ts_output/finalResults/: finalTrees10Coords.csv  finalTrees10Plot.csv
data/ts_trees/: finalTrees100Coords.csv  finalTrees10Coords.csv  finalTrees200Coords.csv  finalTrees200CoordsK50.csv  finalTrees200CoordsLast.csv  finalTrees50Coords.csv
sa_plots/: greedy_200
src/: CSVWriter.cpp  CSVWriter.h  ChristmasTree.cpp  ChristmasTree.h  DE.cpp  DE.h  GreedyPacker.cpp  GreedyPacker.h  Pso.cpp  Pso.h  PsoParticle.cpp  PsoParticle.h  SpatialHash.h  Tabu.cpp  Tabu.h  evaluation.cpp  evaluation.h  main.cpp  operators.cpp  operators.h  simulated_annealing.cpp  simulated_annealing.h  structures.h  submission_file.cpp  submission_file.h  submission_file_greedy.cpp  submission_file_greedy.h  test.cpp
